2004-09-01 Alain Magloire

	Deal with the fact that elements can come
	from WorkingCopy or TranslationUnit
	* src/org/eclipse/cdt/internal/ui/cview/CViewElementComparer.java

2004-08-31 Alain Magloire

	Provide a Proxy wrapper for the includeRefence class
	This will allow us to provide special Icon, a correct
	getParent() etc .. in the C/C++ view.
	* src/org/eclipse/cdt/internal/ui/cview/CViewContentProvider.java
	* src/org/eclipse/cdt/internal/ui/cview/CViewLabelProvider.java
	* src/org/eclipse/cdt/internal/ui/cview/IncludeRefContainer.java
	* src/org/eclipse/cdt/internal/ui/cview/IncludeReferenceProxy.java

2004-08-30 Alain Magloire

	Fix for 72914
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java

2004-08-27 Chris Wiebe

	class wizard fixes
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationWizardPage.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassWizardMessages.properties
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationCodeGenerator.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/SourceFileSelectionDialog.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/SourceFolderSelectionDialog.java

2004-08-27 Alain Magloire

	Fix for 72135
	* src/org/eclipse/cdt/internal/ui/dialogs/cpaths/CPathBasePage.java
	* src/org/eclipse/cdt/internal/ui/dialogs/cpaths/CPathSourceEntryPage.java
	* src/org/eclipse/cdt/internal/ui/wizards/TreeListDialgField.java

2004-08-26 Alain Magloire
	Be on the same length as the Java Editor and Ant Editor
	for the Preference page.  Misc warning removes, when
	raising the level of warnings from the compiler.

	* src/org/eclipse/cdt/internal/ui/preference/CEditorPreferencePage.java
	* src/org/eclipse/cdt/internal/ui/preference/PreferencesMessages.properties

2004-08-25 Chris Wiebe

	better handling of enclosing type
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationWizardPage.java