@@ -11,12 +11,15 @@
 
 package org.eclipse.cdt.internal.ui.search.actions;
 
+import java.util.ArrayList;
+import java.util.Iterator;
 import java.util.List;
 
 import org.eclipse.cdt.core.model.ICElement;
 import org.eclipse.cdt.internal.ui.editor.CEditor;
 import org.eclipse.cdt.internal.ui.editor.ICEditorActionDefinitionIds;
 import org.eclipse.cdt.internal.ui.search.CSearchMessages;
+import org.eclipse.cdt.internal.ui.search.CSearchUtil;
 import org.eclipse.jface.action.IMenuManager;
 import org.eclipse.jface.action.MenuManager;
 import org.eclipse.jface.text.ITextSelection;
@@ -24,6 +27,7 @@ import org.eclipse.jface.viewers.ISelection;
 import org.eclipse.jface.viewers.IStructuredSelection;
 import org.eclipse.search.ui.IContextMenuConstants;
 import org.eclipse.ui.IWorkbenchSite;
+import org.eclipse.ui.IWorkingSet;
 import org.eclipse.ui.actions.ActionGroup;
 import org.eclipse.ui.texteditor.ITextEditorActionConstants;
 
@@ -31,13 +35,17 @@ import org.eclipse.ui.texteditor.ITextEditorActionConstants;
 public class DeclarationsSearchGroup extends ActionGroup {
 	
 	private CEditor fEditor;
+	private IWorkbenchSite fSite;
 	
 	private FindDeclarationsAction fFindDeclarationsAction;
 	private FindDeclarationsInWorkingSetAction fFindDeclarationsInWorkingSetAction;
 	
+	private ArrayList actions;
+	
 	public DeclarationsSearchGroup(IWorkbenchSite site) {
 		fFindDeclarationsAction= new FindDeclarationsAction(site);
-		fFindDeclarationsInWorkingSetAction = new FindDeclarationsInWorkingSetAction(site);
+		fFindDeclarationsInWorkingSetAction = new FindDeclarationsInWorkingSetAction(site,null);
+		fSite = site;
 	}
 	/**
 	 * @param editor
@@ -50,7 +58,7 @@ public class DeclarationsSearchGroup extends ActionGroup {
 		if (editor != null){
 			editor.setAction(ICEditorActionDefinitionIds.FIND_DECL, fFindDeclarationsAction);
 		}
-		fFindDeclarationsInWorkingSetAction = new FindDeclarationsInWorkingSetAction(editor);
+		fFindDeclarationsInWorkingSetAction = new FindDeclarationsInWorkingSetAction(editor,null);
 	}
 	/* 
 	 * Method declared on ActionGroup.
@@ -69,10 +77,35 @@ public class DeclarationsSearchGroup extends ActionGroup {
 		incomingMenu.add(declarationsMenu);
 		incomingMenu = declarationsMenu;
 		
+		FindAction[] actions = getWorkingSetActions();
 		incomingMenu.add(fFindDeclarationsAction);
 		incomingMenu.add(fFindDeclarationsInWorkingSetAction);
+		
+		for (int i=0; i<actions.length; i++){
+			incomingMenu.add(actions[i]);
+		}
 	}	
 	
+	/**
+	 * @return
+	 */
+	private FindAction[] getWorkingSetActions() {
+		ArrayList actions= new ArrayList(CSearchUtil.LRU_WORKINGSET_LIST_SIZE);
+		
+		Iterator iter= CSearchUtil.getLRUWorkingSets().iterator();
+		while (iter.hasNext()) {
+			IWorkingSet[] workingSets= (IWorkingSet[])iter.next();
+			FindAction action;
+			if (fEditor != null)
+				action= new WorkingSetFindAction(fEditor, new FindDeclarationsInWorkingSetAction(fEditor, workingSets), CSearchUtil.toString(workingSets));
+			else
+				action= new WorkingSetFindAction(fSite, new FindDeclarationsInWorkingSetAction(fSite, workingSets), CSearchUtil.toString(workingSets));
+			
+			actions.add(action);
+		}
+		
+		return (FindAction[])actions.toArray(new FindAction[actions.size()]);
+	}
 	public static boolean canActionBeAdded(ISelection selection) {
 		if(selection instanceof ITextSelection) {
 			return (((ITextSelection)selection).getLength() > 0);
