@@ -10,13 +10,18 @@
  ******************************************************************************/
 package org.eclipse.cdt.internal.ui.search.actions;
 
+import java.util.ArrayList;
+import java.util.Iterator;
+
 import org.eclipse.cdt.internal.ui.editor.CEditor;
 import org.eclipse.cdt.internal.ui.editor.ICEditorActionDefinitionIds;
 import org.eclipse.cdt.internal.ui.search.CSearchMessages;
+import org.eclipse.cdt.internal.ui.search.CSearchUtil;
 import org.eclipse.jface.action.IMenuManager;
 import org.eclipse.jface.action.MenuManager;
 import org.eclipse.search.ui.IContextMenuConstants;
 import org.eclipse.ui.IWorkbenchSite;
+import org.eclipse.ui.IWorkingSet;
 import org.eclipse.ui.actions.ActionGroup;
 import org.eclipse.ui.texteditor.ITextEditorActionConstants;
 
@@ -28,9 +33,12 @@ public class ReferencesSearchGroup extends ActionGroup {
 	private CEditor fEditor;
 	private IWorkbenchSite fSite;
 	
+	private ArrayList actions;
+	
 	public ReferencesSearchGroup(IWorkbenchSite site) {
 		fFindRefsAction= new FindRefsAction(site);
-		fFindRefsInWorkingSetAction = new FindRefsInWorkingSetAction(site);
+		fFindRefsInWorkingSetAction = new FindRefsInWorkingSetAction(site, null);
+		fSite=site;
 	}
 	
 	/**
@@ -44,7 +52,7 @@ public class ReferencesSearchGroup extends ActionGroup {
 		if (editor != null){
 			editor.setAction(ICEditorActionDefinitionIds.FIND_REFS, fFindRefsAction);
 		}
-		fFindRefsInWorkingSetAction = new FindRefsInWorkingSetAction(editor);
+		fFindRefsInWorkingSetAction = new FindRefsInWorkingSetAction(editor, null);
 	}
 	
 	/* 
@@ -65,10 +73,36 @@ public class ReferencesSearchGroup extends ActionGroup {
 		incomingMenu.add(refsMenu);
 		incomingMenu = refsMenu;
 		
+		FindAction[] actions = getWorkingSetActions();
 		incomingMenu.add(fFindRefsAction);
 		incomingMenu.add(fFindRefsInWorkingSetAction);
 		
+		for (int i=0; i<actions.length; i++){
+			incomingMenu.add(actions[i]);
+		}
+		
 	}	
+	
+	/**
+	 * @return
+	 */
+	private FindAction[] getWorkingSetActions() {
+		ArrayList actions= new ArrayList(CSearchUtil.LRU_WORKINGSET_LIST_SIZE);
+		
+		Iterator iter= CSearchUtil.getLRUWorkingSets().iterator();
+		while (iter.hasNext()) {
+			IWorkingSet[] workingSets= (IWorkingSet[])iter.next();
+			FindAction action;
+			if (fEditor != null)
+				action= new WorkingSetFindAction(fEditor, new FindRefsInWorkingSetAction(fEditor, workingSets), CSearchUtil.toString(workingSets));
+			else
+				action= new WorkingSetFindAction(fSite, new FindRefsInWorkingSetAction(fSite, workingSets), CSearchUtil.toString(workingSets));
+			
+			actions.add(action);
+		}
+		
+		return (FindAction[])actions.toArray(new FindAction[actions.size()]);
+	}
 	
 	/* 
 	 * Overrides method declared in ActionGroup
